kubernetes/apps/firefly-iii/core.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    app: firefly-iii
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: firefly-iii-core
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-core
  namespace: firefly-iii
  labels:
    app: firefly-iii-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly-iii-core
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: firefly-iii-core
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      dnsConfig:
        searches:
          - firefly-iii.svc.cluster.local
      containers:
        - name: firefly-iii-core
          image: fireflyiii/core:version-6.7.7
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: firefly-iii-uploads
