kubernetes/apps/firefly-iii/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-iii-internal
  namespace: firefly-iii
  labels:
    app: firefly-iii
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`firefly-iii.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: firefly-iii
          port: 8080
  tls:
    secretName: firefly-iii-internal-cert
